Fix bug with z-index of search results autosuggest list not going above the shcool profile menu bar

--- a/app/assets/stylesheets/components/_search-autosuggest.scss
+++ b/app/assets/stylesheets/components/_search-autosuggest.scss
@@ -20,7 +20,7 @@
   }
 
   .search-results-list {
-    z-index: 3;
+    z-index: 4;
     margin-top: -1px;
     text-align: left;
     @include media-breakpoint-down(sm) {
